--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@expo/vector-icons": "^12.0.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "5.11.2",
-    "@react-navigation/native": "~5.8.10",
+    "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "~5.12.8",
     "axios": "^0.21.1",
     "expo": "~42.0.1",
