--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "pesapulse",
     "slug": "pesapulse",
-    "version": "1.0.0",
+    "version": "1.8.3",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
@@ -25,12 +25,13 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#ffffff",
       },
       "package": "com.roverworks.pesapulse"
     },
     "web": {
       "favicon": "./assets/images/favicon.png"
     }
-  }
+  },
+  "permissions" : []
 }
